# vibe-check-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly-agent.yml
docs/adr/: README.md
src/vibecheck/: __init__.py  analyzer.py  cli.py  collector.py
tests/: test_vibecheck.py
