[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-check-cli"
version = "0.1.0"
description = "Analyzes the vibe of any GitHub repo and delivers a brutally honest vibe report"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["github", "cli", "fun", "llm", "developer-tools"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "openai>=1.30.0",
]

[project.scripts]
vibe-check = "vibecheck.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibecheck"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]